# PerUnitPrice

./: .gitignore  Dockerfile  GEMINI.md  README.md  build.sh  gradle.properties  settings.gradle  test.sh
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/perunitprice/: MainActivity.kt
app/src/main/java/com/zeroff/perunitprice/: MainActivity.kt  Product.kt  ProductAdapter.kt
app/src/main/res/layout/: activity_main.xml  item_input.xml  item_product.xml
app/src/main/res/values/: attrs.xml  colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
core_logic/: Cargo.toml
core_logic/src/: lib.rs  parser.rs  product.rs
infra/: Dockerfile
infra-tests/: test_mem_check.sh
infra/tests/: test_mem_check.sh
src/app/: build.gradle
src/app/src/main/java/com/zeroff/perunitprice/: MainActivity.kt  Product.kt  ProductAdapter.kt
src/app/src/main/res/drawable/: ic_moon.xml  ic_sun.xml
src/app/src/main/res/layout/: item_input.xml  item_product.xml
src/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
src/app/src/main/res/values-night/: themes.xml
src/core_logic/: Cargo.toml  test.sh
src/core_logic/src/: lib.rs
