[package]
name = "core_logic"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
regex = "1.10.3"
log = "0.4.21"
android_logger = "0.13.3"
once_cell = "1.19.0"

[profile.dev]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
